package com.lft.command.device;

/**
 * Function: 		ADD FUNCTION.
 * Reason:   		ADD REASON.
 * Date:            2020-09-16 13:46
 * <p>
 * Class Name:      LightReceiver
 * Package Name:    com.lft.command
 * @author Laifengting / E-mail:laifengting@foxmail.com
 * @version 1.0.0
 * @since JDK 8
 */
public class LightReceiver {
	public void on() {
		System.out.println(" 电灯打开了...");
	}
	
	public void off() {
		System.out.println(" 电灯关闭了...");
	}
}
